[gd_scene load_steps=18 format=2]

[ext_resource path="res://Objects/Actors/Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Actors/Enemies/Tree_Slug/Tree_Slug.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Actors/Enemies/Tree_Slug/Tree_Slug_Prototype.png" type="Texture" id=3]
[ext_resource path="res://Objects/Actors/Enemies/Enemy_BackAndForth_Default_State.gd" type="Script" id=4]
[ext_resource path="res://Objects/Actors/Enemies/Enemy_Hurt_State.gd" type="Script" id=5]
[ext_resource path="res://Objects/Actors/Enemies/Enemy_Stun_State.gd" type="Script" id=6]
[ext_resource path="res://Objects/Actors/Enemies/Tree_Slug/Slime.gd" type="Script" id=7]
[ext_resource path="res://Objects/Actors/Enemies/DamagePlayerHitbox.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.8895, 10 )

[sub_resource type="Animation" id=2]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "move"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 0.9 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Sprite:material:shader_param/cutoff")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.5 ]
}

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float cutoff : hint_range(0.0, 0.5);
uniform float smooth_size : hint_range(0.0,0.5);

void fragment()
{
	float r_value = texture(TEXTURE, UV).r;
	float g_value = texture(TEXTURE, UV).g;
	float b_value = texture(TEXTURE, UV).b;
	float r = smoothstep(cutoff, cutoff + smooth_size, r_value * (1.0 - smooth_size) + smooth_size);
	float g = smoothstep(cutoff, cutoff + smooth_size, g_value * (1.0 - smooth_size) + smooth_size);
	float b = smoothstep(cutoff, cutoff + smooth_size, b_value * (1.0 - smooth_size) + smooth_size);
	COLOR = vec4(r, g, b, texture(TEXTURE, UV).a);
}"

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = SubResource( 6 )
shader_param/cutoff = 0.5
shader_param/smooth_size = 0.5

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.155172 )
colors = PoolColorArray( 1, 1, 1, 0, 0.462745, 1, 0.4, 1 )

[sub_resource type="RectangleShape2D" id=9]

[node name="Tree_Slug" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )
max_hp = 50
base_mspd = 50.0
stun_threshold = 25

[node name="Physics_Collider" parent="." index="0"]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="animator" parent="." index="1"]
anims/hurt = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/move = SubResource( 4 )

[node name="shaderAnimator" parent="." index="2"]
anims/hurt = SubResource( 5 )

[node name="Sprite" parent="Sprites" index="0"]
material = SubResource( 7 )
texture = ExtResource( 3 )

[node name="Position2D" type="Position2D" parent="Sprites" index="1"]
position = Vector2( 0, 15 )

[node name="States" type="Node2D" parent="." index="4"]

[node name="Default" type="Node2D" parent="States" index="0"]
script = ExtResource( 4 )

[node name="Hurt" type="Node2D" parent="States" index="1"]
editor/display_folded = true
script = ExtResource( 5 )

[node name="Damage_Timer" type="Timer" parent="States/Hurt" index="0"]
wait_time = 0.5
one_shot = true

[node name="Stun" type="Node2D" parent="States" index="2"]
editor/display_folded = true
script = ExtResource( 6 )

[node name="stunTimer" type="Timer" parent="States/Stun" index="0"]
one_shot = true

[node name="jump_cast_head" parent="Casts" index="0"]
position = Vector2( 0, -25 )
cast_to = Vector2( 40, 0 )

[node name="jump_cast_feet" parent="Casts" index="1"]
position = Vector2( 0, 5 )
cast_to = Vector2( 40, 0 )

[node name="HitBox" parent="." index="7"]
position = Vector2( 0, 4 )
collision_layer = 7168

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 1 )

[node name="UnderSlime" type="Line2D" parent="." index="8"]
position = Vector2( 30, 15 )
points = PoolVector2Array( 0, 0, -60, 0 )
default_color = Color( 0.462745, 1, 0.4, 1 )
texture_mode = 1059061760

[node name="Slime" type="Line2D" parent="." index="9"]
default_color = Color( 0.462745, 1, 0.4, 1 )
gradient = SubResource( 8 )
texture_mode = 2
script = ExtResource( 7 )
targetPath = NodePath("../Sprites/Position2D")

[node name="SlowPlayerHitbox" type="Area2D" parent="Slime" index="0"]
position = Vector2( 30, 15 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 8 )
damage = 10
hit_type = 1

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Slime/SlowPlayerHitbox" index="0"]
shape = SubResource( 9 )

[node name="changeHitboxTimer" type="Timer" parent="Slime" index="1"]
wait_time = 0.1
autostart = true
[connection signal="tree_exiting" from="." to="Slime" method="_on_Tree_Slug_tree_exiting"]
[connection signal="timeout" from="States/Hurt/Damage_Timer" to="States/Hurt" method="_on_Damage_Timer_timeout"]
[connection signal="timeout" from="States/Stun/stunTimer" to="States/Stun" method="_on_stunTimer_timeout"]
[connection signal="call_point_timer" from="Slime" to="Slime" method="_on_Slime_call_point_timer"]
[connection signal="timeout" from="Slime/changeHitboxTimer" to="Slime" method="_on_changeHitboxTimer_timeout"]
